// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogTagLink renders a default blog tag link 1`] = `
<div
  class="blog-tag min-w-1/4 mr-2 my-2"
>
  <a
    class="flex bg-grey-l4 text-grey p4 font-serif w-full py-1 px-2 rounded-sm hover:bg-red hover:text-white"
  >
    <span
      class="flex-1"
    >
      
      #foo
    
    </span>
     
    <span
      class="p5 bg-grey font-normal text-white py-px px-2 ml-1 rounded-full"
    >
      
      123
    
    </span>
  </a>
</div>
`;

exports[`BlogTagLink renders an active blog tag link 1`] = `
<div
  class="blog-tag min-w-1/4 mr-2 my-2 blog-tag--active"
>
  <a
    class="flex bg-grey-l4 text-grey p4 font-serif w-full py-1 px-2 rounded-sm hover:bg-red hover:text-white"
  >
    <span
      class="flex-1"
    >
      
      #foo
    
    </span>
     
    <span
      class="p5 bg-grey font-normal text-white py-px px-2 ml-1 rounded-full"
    >
      
      123
    
    </span>
  </a>
</div>
`;
